tron docker restart: always

--- a/tron-mainnet.yml
+++ b/tron-mainnet.yml
@@ -42,6 +42,7 @@ services:
     ports:
       - "8190:8190"
       - "8191:8191"
+    restart: always
     volumes:
       - "$PWD/volumes/tron-mainnet-node:/data"
     depends_on:
