--- a/tron-nile.yml
+++ b/tron-nile.yml
@@ -30,8 +30,8 @@ services:
       - tron-nile-zookeeper
   tron-nile-node:
     container_name: tron-nile-node
-    # build: https://github.com/SunStake/docker-java-tron.git#37365969d05eff7a381ded2d828b8df4a2b4f365
-    image: "docker.io/sunstake/java-tron"
+    build: https://github.com/SunStake/docker-java-tron.git#37365969d05eff7a381ded2d828b8df4a2b4f365
+    # image: "docker.io/sunstake/java-tron"
     environment:
       - NETWORK=nile
       - EVENT_PLUGIN_ENABLED=true
@@ -40,6 +40,7 @@ services:
     ports:
       - "8090:8090"
       - "8091:8091"
+    restart: always
     volumes:
       - "$PWD/volumes/tron-nile-node:/data"
     depends_on:
