--- a/tron-nile.yml
+++ b/tron-nile.yml
@@ -5,28 +5,28 @@ services:
     container_name: tron-nile-zookeeper
     image: "docker.io/bitnami/zookeeper:3-debian-10"
     ports:
-      - "2181:2181"
+      - "2182:2182"
     restart: always
     volumes:
       - "$PWD/volumes/tron-nile-zookeeper:/bitnami/zookeeper"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
-      - ZOO_PORT_NUMBER=2181
+      - ZOO_PORT_NUMBER=2182
   tron-nile-kafka:
     container_name: tron-nile-kafka
     image: "docker.io/bitnami/kafka:2-debian-10"
     ports:
-      - "9092:9092"
-      - "9093:9093"
+      - "9192:9192"
+      - "9193:9193"
     restart: always
     volumes:
-      - "$PWD/volumes/tron-nile-kafka:/bitnami/kafka"
+      - "/root/tron-daemon/volumes/tron-nile-kafka:/bitnami/kafka"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=tron-nile-zookeeper:2181
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=tron-nile-zookeeper:2182
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://172.17.0.1:9092,EXTERNAL://139.99.121.150:9093
+      - KAFKA_CFG_LISTENERS=CLIENT://:9192,EXTERNAL://:9193
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://172.17.0.1:9192,EXTERNAL://139.99.121.150:9193
       - KAFKA_INTER_BROKER_LISTENER_NAME=CLIENT
     depends_on:
       - tron-nile-zookeeper
@@ -40,14 +40,20 @@ services:
       # image: "docker.io/sunstake/java-tron"
     environment:
       - NETWORK=nile
+      - VM_MAX_TIME_RATIO=20.0
+      - P2P_PORT=28888
+      - FULL_NODE_PORT=18090
+      - SOLIDITY_NODE_PORT=18091
       - EVENT_PLUGIN_ENABLED=true
-      - EVENT_PLUGIN_KAFKA_SERVER=172.17.0.1:9092
+      - EVENT_PLUGIN_KAFKA_SERVER=172.17.0.1:9192
       - EVENT_PLUGIN_BLOCK_TRIGGER_ENABLED=true
+      - EVENT_PLUGIN_TRANSACTION_TRIGGER_ENABLED=true
+      - EVENT_PLUGIN_CONTRACTEVENT_TRIGGER_ENABLED=true
     ports:
-      - "8090:8090"
-      - "8091:8091"
+      - "18090:18090"
+      - "18091:18091"
     restart: always
     volumes:
-      - "$PWD/volumes/tron-nile-node:/data"
+      - "/root/tron-nile-node:/data"
     depends_on:
       - tron-nile-kafka
